feat : desktop 추가 완료

--- a/src/index.html
+++ b/src/index.html
@@ -310,7 +310,8 @@
                         <img class="footer-social-img" src="images/img/facebook.png" alt="facebook"/>
                     </div>
                     <div class="footer-form">
-                        <input class="footer-form-input"/>
+                        <input type="text" class="footer-form-input" name="email-input" placeholder="Your E-mail" />
+                        <button class="subsBtn">SUBSCRIBE</button>
                     </div>
                 </li>
 
