feat : mobile 추가

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                     <button class="financeBtn">FINANCE</button>
                 
                     <span class="slideshow-content-text">
-                        THIS TIE BRAND IS BUCKING THE RETAIL<br>APOCALYPSE WITH A MASSIVE STORE EXPANSION
+                        THIS TIE BRAND IS <br class="line-break-d"> BUCKING THE RETAIL <br class="line-break-m"><br class="line-break-d"> APOCALYPSE WITH A <br class="line-break-d"> MASSIVE STORE EXPANSION
                     </span>
 
                     <span class="slideshow-content-small-text">
@@ -131,7 +131,7 @@
             <!-- grid right area center  -->
             <div class="grid-right-area-center">
                 <div class="">
-                    <span class="grid-right-area-center-header">THIS TIE BRAND IS<br>BUCKING THE RETAIL<br>APOCALYPSE WITH A<br>MASSIVE STORE<br>EXPANSION</span>
+                    <span class="grid-right-area-center-header">THIS TIE BRAND IS<br class="line-break-m">BUCKING THE RETAIL<br>APOCALYPSE WITH A<br>MASSIVE STORE<br>EXPANSION</span>
                     <span class="grid-right-area-center-center">The universe is constantly<br>changing, moving. Some would<br>say it's a "living" thing because<br>you never know what you are<br>going to see on any given night.</span>
                     <button class="grid-right-area-center-footerBnt">READ MORE</button>
                 </div>
